fixed change password button bug

--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1545,7 +1545,7 @@
   margin: 0.5rem 0;
 }
 #account-settings ul li div.hidden {
-  display: block;
+  display: block !important;
 }
 #account-settings ul li div.hidden *:not(a) {
   display: none;
