--- a/src/assets/scss/components/_subscription.scss
+++ b/src/assets/scss/components/_subscription.scss
@@ -21,7 +21,8 @@
             }
 
             &.active {
-                background-color: util.$accent-green;
+                background-color: util.$accent-red;
+                color: util.$background-primary;
             }
             p{
                 text-align: right;
