--- a/src/assets/scss/components/_pod-order.scss
+++ b/src/assets/scss/components/_pod-order.scss
@@ -114,7 +114,8 @@
         }
 
         &.active {
-          background-color: util.$accent-green;
+          background-color: util.$accent-red;
+          color: util.$background-primary;
         }
       }
     }
@@ -142,7 +143,8 @@
       margin-top: 5rem;
       @include util.button;
       padding: 1.5rem;
-      background-color: util.$accent-green;
+      background-color: util.$accent-red;
+      color: util.$background-primary;
     }
 
     h2 {
