--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -4,6 +4,7 @@
 @use "./components/notification";
 @use "./components/payment-process";
 @use "./components/pod-order";
+@use "./components/points";
 @use "./components/quick-access";
 @use "./components/report";
 @use "./components/searchbar";
